--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
+    "vazir-font": "^30.1.0",
     "vazirmatn": "^32.102.0",
     "web-vitals": "^2.1.4"
   },
